<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="E_Status" Id="{ff422239-7a9a-4fab-aac4-c6bdfa6c8873}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_Status :
(
	PowerOff,
	Fault,
	Ready,
	Starting,
	Running,
	Stopping,
	Checking
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>