<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <POU Name="CraneSimulation" Id="{c255987f-7a58-4573-9ac9-545c12e8d4a5}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM CraneSimulation
VAR
	fTime : LREAL; 	
	fPositionAutoMode : LREAL; 
	fInitialPosition : LREAL; 
	fInitialVelocity : LREAL;  
	bPistonMaxNewValue : BOOL;
	fPressureEng : REAL;
	fFlowEng : REAL;
	fPressureBar : LREAL := 60;
	fFlowLmin : LREAL := 20;
	fBoomAngleRad : LREAL;
	fBoomAnimation : LREAL;
	fbModeSelector : FB_ModeSelector;
	fbStatus : FB_Status;
	fbSimulationTime : FB_SimulationTime;
	fbPositionSimulator : FB_PositionSimulator;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Status
fbStatus(
bPowerOn := HMI.bPowerOn,
bFault := FALSE,
bStart:= HMI.bStart,
bStop := HMI.bStop,
bRunning := HMI.bRunning,
eStatus => HMI.eStatus
);

// Mode Selector
fbModeSelector(bControlBox := FALSE);

// Simulation Time
fbSimulationTime(
eMode := HMI.eMode,
eStatus := HMI.eStatus,
stParam := Parameters.stParam,
fTime => HMI.fSimulationTime
);

// Position Simulation and Animation
IF  HMI.eStatus = E_Status.Ready OR HMI.eStatus = E_Status.Starting OR HMI.eStatus = E_Status.Running THEN
	fbPositionSimulator(
		eMode := HMI.eMode,
		stParam := Parameters.stParam,
		fTime := HMI.fSimulationTime,
		fPositionReference := HMI.fManualCylinderPositionReference,
		fVelocityReference := HMI.fCylinderVelocityReference,
		fInitialVelocity := 0.0,
		fInitialPosition := 0.0,
		bRunning => HMI.bRunning,
		sPistonEndStopMessages => HMI.sPistonEndStopMessages,
		fPositionRestricted => HMI.fCylinderPosition,
		stBoomAnimation => HMI.stBoomAnimation,
		stPistonAnimation => HMI.stPistonAnimation,
		fBoomAngleDeg =>  HMI.fBoomAngleDeg
	);
END_IF

F_UpdateParametersByReference( 
	bSetNewValue := bPistonMaxNewValue,
	fMaxPistonStroke := HMI.fMaxPistonPosition,
	paramCylinderPiston := Parameters.stParam.stPistonRange
);]]></ST>
    </Implementation>
    <LineIds Name="CraneSimulation">
      <LineId Id="690" Count="7" />
      <LineId Id="584" Count="1" />
      <LineId Id="588" Count="0" />
      <LineId Id="617" Count="0" />
      <LineId Id="719" Count="0" />
      <LineId Id="699" Count="0" />
      <LineId Id="704" Count="0" />
      <LineId Id="715" Count="3" />
      <LineId Id="714" Count="0" />
      <LineId Id="720" Count="1" />
      <LineId Id="747" Count="0" />
      <LineId Id="705" Count="0" />
      <LineId Id="728" Count="2" />
      <LineId Id="743" Count="0" />
      <LineId Id="731" Count="1" />
      <LineId Id="727" Count="0" />
      <LineId Id="735" Count="0" />
      <LineId Id="738" Count="0" />
      <LineId Id="734" Count="0" />
      <LineId Id="741" Count="1" />
      <LineId Id="739" Count="0" />
      <LineId Id="722" Count="0" />
      <LineId Id="748" Count="0" />
      <LineId Id="350" Count="3" />
      <LineId Id="455" Count="0" />
      <LineId Id="355" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>